--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
     "sass": "^1.26.3"
   }
 }
